--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,7 @@
         --sidebar-bg: radial-gradient(circle, #0f0f14 0%, #17181f 100%);
         --topbar-wrapper-bg: rgb(18 20 26);
         --search-wrapper-bg: rgb(29, 29, 35);
+        --prompt-danger-bg: hsl(3deg 100% 38% / 20%);
     }
 }
 
@@ -23,5 +24,6 @@
         --sidebar-bg: radial-gradient(circle, #0f0f14 0%, #17181f 100%);
         --topbar-wrapper-bg: rgb(18 20 26);
         --search-wrapper-bg: rgb(29, 29, 35);
+        --prompt-danger-bg: hsl(3deg 100% 38% / 20%);
     }
 }
