--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,7 @@
         --topbar-wrapper-bg: rgb(18 20 26);
         --search-wrapper-bg: rgb(29, 29, 35);
         --prompt-danger-bg: hsl(3deg 100% 38% / 20%);
+        --highlight-bg-color: #191819;
     }
 }
 
@@ -25,5 +26,6 @@
         --topbar-wrapper-bg: rgb(18 20 26);
         --search-wrapper-bg: rgb(29, 29, 35);
         --prompt-danger-bg: hsl(3deg 100% 38% / 20%);
+        --highlight-bg-color: #191819;
     }
 }
